<resources>
    <string name="time_logger_screen">Логирование времени</string>
    <string name="statistics_screen">Статистика</string>

    <string name="log_exists_error">Запись на этот день уже существует</string>

    <string name="user_number_input_hint">Табельный номер</string>
    <string name="password_input_hint">Пароль</string>
    <string name="log_in_button">Войти</string>
    <string name="empty_fields_error">Все поля должны быть заполнены</string>
    <string name="no_such_user_error">Пользователь с таким табельным номером не найден</string>
    <string name="passwords_mismatch_error">Не верный пароль</string>

    <string name="day_input_hint">День</string>
    <string name="arrival_time_input_hint">Время прибытия</string>
    <string name="leaving_time_input_hint">Время ухода</string>
    <string name="day_input">Лог за %1$s</string>
    <string name="arrival_time_input">Пришёл в %1$s</string>
    <string name="leaving_time_input">Ушёл в %1$s</string>
    <string name="add_log_button">Добавить запись</string>
    <string name="time_mismatch_error">Время прибытия не может быть больше чем время ухода</string>
    <string name="time_successfully_logged">Запись успешно добавлена</string>

    <string name="time_filters_dialog_fragment_title">Установите диапазон отображения данных</string>
    <string name="start_time_input_hint">Левая граница</string>
    <string name="end_time_input_hint">Правая граница</string>
    <string name="filters_time_mismatch_error">Левая граница поиска не может быть больше правой</string>

    <string name="change_password_dialog_fragment_title">Смена пароля</string>
    <string name="old_password_input_hint">Старый пароль</string>
    <string name="new_password_input_hint">Новый пароль</string>
    <string name="password_successfully_changed">Пароль успешно изменён</string>

    <string name="delete_log_dialog_fragment_title">Удалить запись?</string>
    <string name="delete_log_dialog_fragment_message">Запись будет безвозвратно удалена</string>

</resources>
